--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-scrollspy": "^3.4.3",
+    "react-snowfall": "^2.3.0",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
